--- a/home/static/home/styl/audiovisual.styl
+++ b/home/static/home/styl/audiovisual.styl
@@ -1,6 +1,9 @@
 .equipament-container
     padding 2rem 1rem 2rem 1rem
 
+.audiovisual-description
+    padding 3rem 1rem 3rem 1rem
+
 .wrapper
     width 330px
     min-width 300px
