--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -5,7 +5,11 @@ primarycolor = #59d7c5
 secondarycolor = #59d7c5
 filtercolor = rgba(43,73,103,0.4)
 lightbg = #f7f7f7
-mediumbg = #e5e5e5
+mediumbg = #f0f0f0
+audiovisualcolor = #01AEF0
+enterprisecolor = #7BBA2B
+solutionscolor = #9355B1
+academycolor = #EC8115
 
 *
     box-sizing: border-box
@@ -74,7 +78,7 @@ a
     text-align center
 
 .section-title_container
-    min-height: 252px
+    min-height: 220px
 
 .page-title
     margin-top 100px
@@ -217,7 +221,7 @@ a
     padding 5rem 0 0
 
 .module-item_cta
-    margin-bottom 3rem
+    padding-bottom 3rem
 
 .modules-group
     padding 0
@@ -279,6 +283,7 @@ a
 @import './home/clients'
 @import './home/contact'
 @import './audiovisual'
+@import './enterprise'
 @import './footer'
 @import './projects'
 @import './single-project'
