--- a/home/static/home/styl/home/form.styl
+++ b/home/static/home/styl/home/form.styl
@@ -36,9 +36,38 @@ input
     border-radius 30px
     background-color secondarycolor
     border 1px solid secondarycolor
+    &.audiovisual
+        background-color rgba(0, 0, 0, 0)
+        border 2px solid audiovisualcolor
+        color audiovisualcolor
+        &:hover, &:active, &:focus
+            background-color audiovisualcolor
+            border-color audiovisualcolor
+    &.enterprise
+        background-color rgba(0, 0, 0, 0)
+        border 2px solid enterprisecolor
+        color enterprisecolor
+        &:hover, &:active, &:focus
+            background-color enterprisecolor
+            border-color enterprisecolor
+    &.solutions
+        background-color rgba(0, 0, 0, 0)
+        border 2px solid solutionscolor
+        color solutionscolor
+        &:hover, &:active, &:focus
+            background-color solutionscolor
+            border-color solutionscolor
+    &.academy
+        background-color rgba(0, 0, 0, 0)
+        border 2px solid academycolor
+        color academycolor
+        &:hover, &:active, &:focus
+            background-color academycolor
+            border-color academycolor
     &:hover, &:active, &:focus
         background-color: darkcolor
         border-color darkcolor
+        color white
 
 .o-button
     font-family: 'Raleway', sans-serif
