--- a/home/static/home/styl/home/header.styl
+++ b/home/static/home/styl/home/header.styl
@@ -22,9 +22,16 @@
         letter-spacing: 1px
         text-decoration: none
         transition all 400ms ease
-    
         &:hover, &:focus, &:active
             color: secondarycolor
+            &.audiovisual
+                color audiovisualcolor
+            &.enterprise
+                color enterprisecolor
+            &.solutions
+                color solutionscolor
+            &.academy
+                color academycolor
 
 .header-content
     justify-content: space-between
