--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -31,19 +31,19 @@
                 </div>
                 <div class="header-nav">
                     <ul class="header-nav_items flex">
-                        <a href="{% url 'audiovisual' %}"><li>Imagens</li></a>
-                        <a href="{% url 'enterprise' %}"><li>Enterprise</li></a>
-                        <a href="{% url 'solutions' %}"><li>Soluções</li></a>
-                        <a href="{% url 'academy' %}"><li>Academy</li></a>
+                        <a class="audiovisual" href="{% url 'audiovisual' %}"><li>Imagens</li></a>
+                        <a class="enterprise" href="{% url 'enterprise' %}"><li>Enterprise</li></a>
+                        <a class="solutions" href="{% url 'solutions' %}"><li>Soluções</li></a>
+                        <a class="academy" href="{% url 'academy' %}"><li>Academy</li></a>
                     </ul>
                     <span id="mobile-menu" class="fa fa-bars"></span>
                 </div>
             </div>
             <ul class="header-nav_mobile-items flex-column">
-                <a href="{% url 'audiovisual' %}"><li>Imagens</li></a>
-                <a href="{% url 'enterprise' %}"><li>Enterprise</li></a>
-                <a href="{% url 'solutions' %}"><li>Soluções</li></a>
-                <a href="{% url 'academy' %}"><li>Academy</li></a>
+                <a class="audiovisual" href="{% url 'audiovisual' %}"><li>Imagens</li></a>
+                <a class="enterprise" href="{% url 'enterprise' %}"><li>Enterprise</li></a>
+                <a class="solutions" href="{% url 'solutions' %}"><li>Soluções</li></a>
+                <a class="academy" href="{% url 'academy' %}"><li>Academy</li></a>
             </ul>
         </header>
 
