--- a/home/static/home/styl/services.styl
+++ b/home/static/home/styl/services.styl
@@ -15,7 +15,7 @@ special-margin = 8%
         padding-left 0
 
 .special-service
-    margin-bottom 4rem
+    margin 2rem 0rem
     flex-wrap wrap
     padding 0
 
@@ -56,9 +56,11 @@ special-margin = 8%
         width 50%
 
     .special-service
-        margin-bottom 6rem
+        margin 2rem 0
         padding 0 4rem
         justify-content space-between
+        &:first-child
+            margin-top 4rem
         &:last-child
             margin-bottom 4rem
         &:nth-child(2n)
