--- a/home/static/home/styl/enterprise.styl
+++ b/home/static/home/styl/enterprise.styl
@@ -1,5 +1,9 @@
 .industry-item_container
     flex-wrap wrap
+    padding-bottom 2rem
+
+.benefit-item_container
+    flex-wrap wrap
 
 .industry-item
     text-align: center
@@ -13,6 +17,26 @@
         margin-bottom: 2rem
         transition: color 400ms ease
 
+.benefit-image
+    padding-bottom 1.5rem
+
+.singleservice 
+    width 300px
+    height 100%
+    background-color #f3f3f3
+    padding 25px
+    color #b2b2b2
+    text-align left
+    margin 0 1rem 3rem 1rem
+    padding 40px
+    border-bottom 5px solid primarycolor 
+    border-radius 10px
+
+
 @media(min-width: 768px)
     .industry-item
         width: 25%
+
+@media (max-width: 768px) 
+    .singleservice
+        width 80%
