--- a/static/css/home.css
+++ b/static/css/home.css
@@ -570,6 +570,11 @@ a.big {
   border-top: 18px solid #fff;
   border-bottom: 0;
 }
+.triangles.black:after {
+  bottom: 0;
+  border-bottom: 18px solid #000;
+  border-top: 0;
+}
 .overlay {
   position: absolute;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(43,73,103,0.4)), to(rgba(43,73,103,0.4)));
@@ -605,26 +610,55 @@ a.big {
   top: 0;
   left: 0;
 }
-.module-title {
-  height: 350px;
-  position: relative;
-  background-position: center center;
-  background-size: cover;
+.section-module {
+  background-color: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 1.5rem 2.5rem;
 }
-.module-title .title {
+.module {
+  height: 180px;
+  width: 100%;
+  margin: 0.4rem 0rem;
+  background-position: center;
+  background-size: 100%;
+  border: 2px solid #000;
+  border-radius: 2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.module .title {
   z-index: 100;
 }
-.module-title.audiovisual {
-  background-image: url("/static/img/audiovisual-background.jpg");
+.module.audiovisual {
+  background-image: url("/static/img/back_audiovisual.jpg");
 }
-.module-title.enterprise {
-  background-image: url("/static/img/enterprise-background.jpg");
+.module.enterprise {
+  background-image: url("/static/img/back_enterprise.jpg");
 }
-.module-title.solutions {
-  background-image: url("/static/img/solutions-background.jpg");
+.module.solutions {
+  background-image: url("/static/img/back_solutions.jpg");
 }
-.module-title.academy {
-  background-image: url("/static/img/academy-background.jpg");
+.module.academy {
+  background-image: url("/static/img/back_academy.jpg");
 }
 .module-item_container {
   -ms-flex-wrap: wrap;
@@ -634,52 +668,41 @@ a.big {
 .module-item_cta {
   padding-bottom: 3rem;
 }
-.modules-group {
-  padding: 0;
+.module-button {
+  background-color: rgba(0,0,0,0);
+  border: 0;
+  padding: 20.5px 86px;
 }
-.module-description {
-  padding: 7rem 1rem 2rem 1rem;
+.module-button.audiovisual {
+  background-image: url("/static/img/button_audiovisual0.png");
 }
-.module-description-content {
-  max-width: 650px;
+.module-button.enterprise {
+  background-image: url("/static/img/button_enterprise0.png");
 }
-.module-description-content .subtitle {
-  margin-top: -3rem;
+.module-button.solutions {
+  background-image: url("/static/img/button_solutions0.png");
 }
-.module {
-  overflow: hidden;
-  text-align: center;
-  padding: 2rem 3rem 0 3rem;
-}
-.module-header {
-  text-align: center;
-  padding: 0 2rem 2rem 2rem;
-  width: 100%;
-}
-.module-card {
-  height: 300px;
-  border-radius: 21px 21px 0 0;
-  border-style: solid;
-  border-width: 3px 3px 0 3px;
-}
-.module-card.primary {
-  border-color: #01abf1;
-}
-.module-card.secondary {
-  border-color: #168b40;
-}
-.module-card.terciary {
-  border-color: #9765b3;
-}
-.module-card.quaternary {
-  border-color: #ef8c20;
+.module-button.academy {
+  background-image: url("/static/img/button_academy0.png");
 }
 .module-logo {
-  overflow: hidden;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80%;
+  width: 370px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0rem 2rem 0rem 4rem;
+}
+.module-description {
+  color: #fff;
+  white-space: pre-wrap;
+}
+@media (max-width: 800px) {
+  .light-text {
+    font-size: 12px;
+  }
 }
 @media (min-width: 768px) {
   .page-title {
@@ -1351,6 +1374,11 @@ input {
 .industry-item_container {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding-bottom: 2rem;
+}
+.benefit-item_container {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .industry-item {
   text-align: center;
@@ -1367,9 +1395,158 @@ input {
   -webkit-transition: color 400ms ease;
   transition: color 400ms ease;
 }
+.benefit-image {
+  padding-bottom: 1.5rem;
+}
+.singleservice {
+  width: 300px;
+  height: 100%;
+  background-color: #f3f3f3;
+  padding: 25px;
+  color: #b2b2b2;
+  text-align: left;
+  margin: 0 1rem 3rem 1rem;
+  padding: 40px;
+  border-bottom: 5px solid #59d7c5;
+  border-radius: 10px;
+}
 @media (min-width: 768px) {
   .industry-item {
     width: 25%;
+  }
+}
+@media (max-width: 768px) {
+  .singleservice {
+    width: 80%;
+  }
+}
+.demo-title {
+  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 50px;
+}
+.pricing-table {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
+  padding-top: 3rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.pricing-table .pricing-option {
+  width: 28%;
+  background: #f7f7f7;
+  float: left;
+  padding: 2%;
+  text-align: center;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.pricing-table .pricing-option:nth-child(even) {
+  margin: 0 2%;
+}
+.pricing-table .pricing-option:hover {
+  cursor: pointer;
+  -webkit-box-shadow: 0px 2px 30px rgba(0,0,0,0.3);
+          box-shadow: 0px 2px 30px rgba(0,0,0,0.3);
+  -webkit-transform: scale(1.04);
+          transform: scale(1.04);
+}
+.pricing-table .pricing-option:hover i,
+.pricing-table .pricing-option:hover h1,
+.pricing-table .pricing-option:hover span,
+.pricing-table .pricing-option:hover b {
+  color: #59d7c5;
+}
+.pricing-table .pricing-option:hover .front {
+  opacity: 0;
+  visibility: hidden;
+}
+.pricing-table .pricing-option:hover .back {
+  opacity: 1 !important;
+  visibility: visible !important;
+}
+.pricing-table .pricing-option:hover .back a.button {
+  -webkit-transform: translateY(0px) !important;
+          transform: translateY(0px) !important;
+}
+.pricing-table .pricing-option hr {
+  border: none;
+  border-bottom: 1px solid #f0f0f0;
+}
+.pricing-table .pricing-option i {
+  font-size: 3rem;
+  color: #d8d8d8;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.pricing-table .pricing-option h1 {
+  margin: 10px 0;
+  color: #212121;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.pricing-table .pricing-option p {
+  color: #999;
+  padding: 0 10px;
+  line-height: 1.3;
+}
+.pricing-table .pricing-option .price {
+  position: relative;
+}
+.pricing-table .pricing-option .price .front span.price {
+  font-size: 2rem;
+  text-transform: uppercase;
+  margin-top: 20px;
+  display: block;
+  font-weight: 700;
+  position: relative;
+}
+.pricing-table .pricing-option .price .front span.price b {
+  position: absolute;
+  font-size: 1rem;
+  margin-left: 2px;
+  font-weight: 600;
+}
+.pricing-table .pricing-option .price .back {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.pricing-table .pricing-option .price .back a.button {
+  background: #59d7c5;
+  padding: 15px 20px;
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  position: absolute;
+  font-size: 13px;
+  top: -5px;
+  left: 0;
+  right: 0;
+  width: 150px;
+  margin: auto;
+  text-transform: uppercase;
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.pricing-table .pricing-option .price .back a.button:hover {
+  background: #41d1bc;
+}
+@media (max-width: 768px) {
+  .pricing-table .pricing-option {
+    padding: 5%;
+    width: 90%;
+  }
+  .pricing-table .pricing-option:nth-child(even) {
+    margin: 30px 0 !important;
   }
 }
 .footer {
